test/parser/string_literal/invalid_escape_error.exp
Error: Invalid escape sequence. Expected `"`, `\`, `n`, `t`, `r`, or `x`.
test/parser/string_literal/invalid_escape_error.myte:4:8-8
 4 |   "asdf\a";
   |         ^